<resources>
    <string name="app_name">Calculator</string>
    <string name="dp_name">Calculator</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_time">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_equal">＝</string>
    <string name="btn_back">→</string>
    <string name="btn_allClear">AC</string>
    <string name="btn_clear">C</string>
    <string name="btn_changeOperator"> +/- </string>
    <string name="btn_decimalPoint">.</string>
    <string name="dialog_ArithmeticErrorTitle">0で割ることはできません</string>
    <string name="dialog_message">オールクリアします</string>
    <string name="dialog_ok">OK</string>
    <string name="instruction_title">12桁表示</string>
    <string name="dialog_FlowErrorTitle">12桁以上は表示できません</string>
    <string name="dialog_NaNErrorTitle">0同士の除算はできません</string>
    <string name="btn_cc">Change Color</string>
</resources>