<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/dp_name"
        android:textColor="@color/titleColor"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/OutputOperator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/Output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/buttonColor"
            android:gravity="right"
            android:text="@string/btn0"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_changeOperator"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_changeOperator"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />


        <Button
            android:id="@+id/btn_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_back"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_clear"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_allClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_allClear"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn7"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn8"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn9"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_divide"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn4"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn5"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn6"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_time"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_time"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn1"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn2"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn3"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_minus"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn0"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_decimalPoint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_decimalPoint"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_equal"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

        <Button
            android:id="@+id/btn_plus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="buttonPress"
            android:text="@string/btn_plus"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:rippleColor="@color/buttonClickColor" />

    </LinearLayout>

    <TextView
        android:id="@+id/Instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/instruction_title"
        android:textColor="@color/buttonColor"
        android:textSize="20sp" />

</LinearLayout>